# churn

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  churn_da_ds.html  churn_da_ds.ipynb  export_churn_bi.py  feature_choices.json  kmeans.joblib  load_to_postgres.py  meta.json  model_lgbm.joblib  pyproject.toml  seg_scaler.joblib  train_and_save.py
