[project]
name = "churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib==1.5.3",
    "lightgbm==4.6.0",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "scikit-learn==1.8.0",
    "sqlalchemy==2.0.36",
    "streamlit==1.40.2",
]
